--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "ruxiana",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0"
   }
